--- a/app-redux-table/package.json
+++ b/app-redux-table/package.json
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
     "@angular/cli": "~7.2.3",
-    "@angular/compiler-cli": "~7.2.0",
+    "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "~7.2.0",
     "@ngrx/schematics": "^7.1.0",
     "@types/jasmine": "~2.8.8",
